# neural-memory

./: .gitattributes  .gitignore  .mcp.json  README.md  config.yaml  install.ps1  install.sh  package.json  pyproject.toml  server.js
.claude-plugin/: marketplace.json  plugin.json
models/paraphrase-multilingual-MiniLM-L12-v2/: config.json  config_sentence_transformers.json  tokenizer_config.json
public/: app.js  index.html  style.css
skills/neural-memory/: SKILL.md
src/neural_memory/: __init__.py  __main__.py  config.py  server.py
src/neural_memory/core/: consolidation.py  decay.py  memory_store.py  neuron.py  synapse.py  working_memory.py
src/neural_memory/db/: connection.py  repositories.py  schema.sql
src/neural_memory/embeddings/: local_model.py  provider.py
src/neural_memory/files/: file_store.py
src/neural_memory/retrieval/: hybrid_ranker.py  semantic_search.py  spreading_activation.py
tests/: conftest.py  test_connection.py  test_consolidation.py  test_decay.py  test_embedding.py  test_file_store.py  test_hybrid_ranker.py  test_memory_store.py  test_neuron.py  test_repositories.py  test_semantic_search.py  test_spreading_activation.py  test_synapse.py  test_working_memory.py
